added subheader and centered headings

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <body>
     <h1>David's Programming Cheat Sheet</h1>
+    <h2>(and stuff)</h2>
 
     <p>Cool code stuff goes here.</p>
   </body>
