--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <h2>(and stuff)</h2>
 
     <p>Cool code stuff goes here.</p>
+    <p>Additional cool code stuff goes here.</p>
+    <p id="wonky">But not here. That'd be weird.</p>
   </body>
 
 </html>
