added dotted border around 'cool.'

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <h1>David's Programming Cheat Sheet</h1>
     <h2>(and stuff)</h2>
 
-    <p>Cool code stuff goes here.</p>
-    <p>Additional cool code stuff goes here.</p>
+    <p><span class="cool">Cool</span> code stuff goes here.</p>
+    <p>Additional <span class="cool">cool</span> code stuff goes here.</p>
     <p id="wonky">But not here. That'd be weird.</p>
   </body>
 
