added span & div. Changed H1

--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
     <h1>David's Programming Cheat Sheet</h1>
     <h2>(and stuff)</h2>
 
-    <p><span class="cool">Cool</span> code stuff goes here.</p>
-    <p>Additional <span class="cool">cool</span> code stuff goes here.</p>
+    <p>Cool code stuff goes here.</p>
+    <p>Additional coolcode stuff goes here.</p>
     <p id="wonky">But not here. That'd be weird.</p>
+
+    <span>This is a span.</span>
+    <div>This is a div (set to "display: block")</div>
   </body>
 
 </html>
