removed practice code. added colors.html and opacity.html

--- a/colors.html
+++ b/colors.html
@@ -5,8 +5,6 @@
     <link href="style.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina" rel="stylesheet">
-
-
   </head>
 
   <body>
@@ -45,8 +43,8 @@
       <ul>
 
         <li>Name</li>
-        <p>Many colors can be summoned just by their name. These colors tend to be the more common colors (<span class="red">RED</span>, <span class="blue">BLUE</span>, <span class="green">GREEN</span>),</p>
-        <p>but also some obscure colors (<span class="light-steel-blue">LIGHTSTEELBLUE</span>, <span class="pale-goldenrod">PALEGOLDENROD</span>, <span class="plum">PLUM</span>).</p>
+        <p>Many colors can be summoned just by their name. Many of these colors tend to be common (<span class="red">RED</span>, <span class="blue">BLUE</span>, <span class="green">GREEN</span>),</p>
+        <p>but others are rather obscure. (<span class="light-steel-blue">LIGHTSTEELBLUE</span>, <span class="pale-goldenrod">PALEGOLDENROD</span>, <span class="plum">PLUM</span>).</p>
         <p>For a full list of colors that can be called by name, visit <a href="https://www.w3schools.com/cssref/css_colors.asp" target="_blank">W3Schools'</a> page on colors.</p>
 
         <li>Hexadecimal Value</li>
@@ -58,7 +56,7 @@
         <li>RGB Value</li>
         <p>Another way to classentify a color is with its RGB value (RGB stands for Red-Green-Blue).</p>
         <p>By combining varying intensities of <span class="red">red</span>, <span class="green">green</span>, and <span class="blue">blue</span>, new colors can be attained. The "intensity scale" ranges from 0 to 255.</p>
-        <p>
+        <p>The RGB value for (standard) <span class="blue">blue</span> is <span class="blue">rgb(0, 0, 255)</span>. The values for <span class="red">red</span> and <span class="green">green</span> are set to zero. But if you sprinkle some <span class="red">red</span> and <span class="green">green</span>, you get a new color (example: <span id="new-color">rgb(145, 54, 255)</span>).
 
 
       </ul>
