--- a/index.html
+++ b/index.html
@@ -3,22 +3,46 @@
   <head>
     <title>My Programming Cheat Sheet</title>
     <link href="style.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina" rel="stylesheet">
 
 
   </head>
 
   <body>
-    <h1>David's Programming Cheat Sheet</h1>
-    <h2>(and stuff)</h2>
+    <div class="header">
+      <h1>David's Programming Cheat Sheet</h1>
+      <h2>(and stuff)</h2>
+    </div>
 
-    <p>Cool code stuff goes here.</p>
-    <p>Additional coolcode stuff goes here.</p>
-    <p id="wonky">But not here. That'd be weird.</p>
+    <div class="left-panel">
 
-    <span>This is a span.</span>
-    <div>This is a div (set to "display: block")</div>
+      <a href="index.html">
+        <button class="buttons">
+          HOME
+        </button>
+      </a>
+
+      <a href="colors.html">
+        <button class="buttons">
+          COLORS
+        </button>
+      </a>
+
+      <a href="opacity.html">
+        <button class="buttons">
+          OPACITY
+        </button>
+      </a>
+
+    </div>
+
+    <div class="main-area">
+      <h1>HOME</h1>
+      <p>Over the course of the next couple of weeks, I will be adding explanations and mini-guides to this webpage.</p>
+      <p>Use the navigation bar on the left to select a topic.</p>
+    </div>
+
   </body>
 
 </html>
