--- a/opacity.html
+++ b/opacity.html
@@ -5,8 +5,6 @@
     <link href="style.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina" rel="stylesheet">
-
-
   </head>
 
   <body>
@@ -50,8 +48,7 @@
       <div id="twenty-five-opaque"></div>
       <p>And at 10% opacity.</p>
       <div id="ten-opaque"></div>
-      <p>As you can see, as you decrease the opacity, the item becomes more transparent.</p>
-      <p>*NOTE: Even though it appears as though the item is simply getting "lighter," it is not. It is becoming more and more transparent.</p>
+      <p>The <strong>ONLY</strong> difference between these squares is the opacity. They are all black.</p>
     </div>
 
   </body>
