--- a/colors.html
+++ b/colors.html
@@ -41,23 +41,20 @@
 
       <h2>Three Common Approaches</h2>
       <ul>
-
-        <li>Name
+        <li>Name</li>
         <p>Many colors can be summoned just by their name. Many of these colors tend to be common (<span class="red">RED</span>, <span class="blue">BLUE</span>, <span class="green">GREEN</span>), but others are rather obscure. (<span class="light-steel-blue">LIGHTSTEELBLUE</span>, <span class="pale-goldenrod">PALEGOLDENROD</span>, <span class="plum">PLUM</span>).</p>
-        <p>For a full list of colors that can be called by name, visit <a href="https://www.w3schools.com/cssref/css_colors.asp" target="_blank">W3Schools'</a> page on colors.</p></li>
+        <p>For a full list of colors that can be called by name, visit <a href="https://www.w3schools.com/cssref/css_colors.asp" target="_blank">W3Schools'</a> page on colors.</p>
 
-        <li>Hexadecimal Value
+        <li>Hexadecimal Value</li>
         <p>Colors can also be summoned by using their corresponding hexadecimal numbers.</p>
         <p>For example, the hexadecimal for the color <span class="hex-red">red</span> is <span class="hex-red">#FF0000</span>.</p>
         <p>With hexadecimal notation, you can get colors that are more specific than if you just use a color's name. You can experiment with various shades.</p>
-        <p>If you use <span class="lighter-hex-red">#ff7777</span>, you get a lighter shade of <span class="hex-red">red</span>.</li>
+        <p>If you use <span class="lighter-hex-red">#ff7777</span>, you get a lighter shade of <span class="hex-red">red</span>.
 
-        <li>RGB Value
+        <li>RGB Value</li>
         <p>Another way to classentify a color is with its RGB value (RGB stands for Red-Green-Blue).</p>
         <p>By combining varying intensities of <span class="red">red</span>, <span class="green">green</span>, and <span class="blue">blue</span>, new colors can be attained. The "intensity scale" ranges from 0 to 255.</p>
-        <p>The RGB value for (standard) <span class="blue">blue</span> is <span class="blue">rgb(0, 0, 255)</span>. The values for <span class="red">red</span> and <span class="green">green</span> are set to zero. But if you sprinkle some <span class="red">red</span> and <span class="green">green</span>, you get a new color (example: <span id="new-color">rgb(145, 54, 255)</span>).</li>
-
-
+        <p>The RGB value for (standard) <span class="blue">blue</span> is <span class="blue">rgb(0, 0, 255)</span>. The values for <span class="red">red</span> and <span class="green">green</span> are set to zero. But if you sprinkle some <span class="red">red</span> and <span class="green">green</span>, you get a new color (example: <span id="new-color">rgb(145, 54, 255)</span>).
       </ul>
     </div>
 
