--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   </head>
 
   <body>
-    <div class="header">
+    <header>
       <h1>David's Programming Cheat Sheet</h1>
       <h2>(and stuff)</h2>
-    </div>
+    </header>
 
     <div class="left-panel">
 
@@ -35,9 +35,15 @@
         </button>
       </a>
 
+      <a href="line-height.html">
+        <button class="buttons">
+          LINE-HEIGHT
+        </button>
+      </a>
+
     </div>
 
-    <div class="main-area">
+    <div class="container">
       <h1>HOME</h1>
       <p>Over the course of the next couple of weeks, I will be adding explanations and mini-guides to this webpage.</p>
       <p>Use the navigation bar on the left to select a topic.</p>
