--- a/opacity.html
+++ b/opacity.html
@@ -8,10 +8,10 @@
   </head>
 
   <body>
-    <div class="header">
+    <header>
       <h1>David's Programming Cheat Sheet</h1>
       <h2>(and stuff)</h2>
-    </div>
+    </header>
 
     <div class="left-panel">
 
@@ -33,9 +33,15 @@
         </button>
       </a>
 
+      <a href="line-height.html">
+        <button class="buttons">
+          LINE-HEIGHT
+        </button>
+      </a>
+
     </div>
 
-    <div class="main-area">
+    <div class="container">
       <h1>OPACITY</h1>
       <p>Sometimes, we want a solid color. But sometimes, we want some transparency. So... we adjust the opacity!</p>
       <p>Below is a black square that is fully opaque.</p>
