--- a/colors.html
+++ b/colors.html
@@ -4,7 +4,6 @@
     <title>My Programming Cheat Sheet</title>
     <link href="style.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina" rel="stylesheet">
   </head>
 
   <body>
@@ -15,28 +14,34 @@
 
     <div class="left-panel">
 
-      <a href="index.html">
-        <button class="buttons">
+      <a class="nav-button" href="index.html">
+        <div class="buttons">
           HOME
-        </button>
+        </div>
       </a>
 
-      <a href="colors.html">
-        <button class="buttons">
+      <a class="nav-button" href="colors.html">
+        <div class="buttons">
           COLORS
-        </button>
+        </div>
       </a>
 
-      <a href="opacity.html">
-        <button class="buttons">
+      <a class="nav-button" href="opacity.html">
+        <div class="buttons">
           OPACITY
-        </button>
+        </div>
       </a>
 
-      <a href="line-height.html">
-        <button class="buttons">
+      <a class="nav-button" href="line-height.html">
+        <div class="buttons">
           LINE-HEIGHT
-        </button>
+        </div>
+      </a>
+
+      <a class="nav-button" href="border-radius.html">
+        <div class="buttons">
+          BORDER RADIUS
+        </div>
       </a>
 
     </div>
