--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>My Programming Cheat Sheet</title>
     <link href="style.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet"> -->
 
 
   </head>
