fixed header post-nuke

--- a/index.html
+++ b/index.html
@@ -17,42 +17,48 @@
     <div class="left-panel">
 
       <a class="nav-button" href="index.html">
-        <div class="buttons">
-          HOME
-        </div>
-      </a>
+          <div class="buttons">
+            HOME
+          </div>
+        </a>
 
-      <a class="nav-button" href="colors.html">
-        <div class="buttons">
-          COLORS
-        </div>
-      </a>
+        <a class="nav-button" href="colors.html">
+          <div class="buttons">
+            COLORS
+          </div>
+        </a>
 
-      <a class="nav-button" href="opacity.html">
-        <div class="buttons">
-          OPACITY
-        </div>
-      </a>
+        <a class="nav-button" href="opacity.html">
+          <div class="buttons">
+            OPACITY
+          </div>
+        </a>
 
-      <a class="nav-button" href="line-height.html">
-        <div class="buttons">
-          LINE-HEIGHT
-        </div>
-      </a>
+        <a class="nav-button" href="line-height.html">
+          <div class="buttons">
+            LINE-HEIGHT
+          </div>
+        </a>
 
-      <a class="nav-button" href="border-radius.html">
-        <div class="buttons">
-          BORDER RADIUS
-        </div>
-      </a>
+        <a class="nav-button" href="border-radius.html">
+          <div class="buttons">
+            BORDER RADIUS
+          </div>
+        </a>
 
-    </div>
+        <a class="nav-button" href="border-radius.html">
+          <div class="buttons">
+            BORDER RADIUS
+          </div>
+        </a>
 
-    <div class="container">
-      <h1>HOME</h1>
-      <p>Over the course of the next couple of weeks, I will be adding explanations and mini-guides to this webpage.</p>
-      <p>Use the navigation bar on the left to select a topic.</p>
-    </div>
+      </div>
+
+      <!-- <div class="container">
+        <h1>HOME</h1>
+        <p>Over the course of the next couple of weeks, I will be adding explanations and mini-guides to this webpage.</p>
+        <p>Use the navigation bar on the left to select a topic.</p>
+      </div> -->
 
   </body>
 
