fixed nav and content positioning and margins, set header and footer to fixed

--- a/index.html
+++ b/index.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Programming Cheat Sheet</title>
-    <link href="style.css" rel="stylesheet" />
-    <!-- <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet"> -->
-
-
+    <meta charset="utf-8">
+    <title></title>
+    <link href="style.css" rel="stylesheet"/>
   </head>
-
   <body>
     <header>
       <h1>David's Programming Cheat Sheet</h1>
       <h2>(and stuff)</h2>
     </header>
 
-    <div class="left-panel">
+    <div class="container">
 
-      <a class="nav-button" href="index.html">
-          <div class="buttons">
-            HOME
-          </div>
-        </a>
+      <nav>
+        <a class="nav-button" href="index.html">
+            <div class="buttons">
+              HOME
+            </div>
+          </a>
 
         <a class="nav-button" href="colors.html">
           <div class="buttons">
@@ -46,20 +44,26 @@
           </div>
         </a>
 
-        <a class="nav-button" href="border-radius.html">
+        <a class="nav-button" href="web-fonts.html">
           <div class="buttons">
-            BORDER RADIUS
+            WEB FONTS
           </div>
         </a>
 
-      </div>
+      </nav>
 
-      <!-- <div class="container">
+      <div class="content">
         <h1>HOME</h1>
         <p>Over the course of the next couple of weeks, I will be adding explanations and mini-guides to this webpage.</p>
         <p>Use the navigation bar on the left to select a topic.</p>
-      </div> -->
+      </div>
+
+    </div>
+
+    <footer>
+      <p>©20xx</p>
+    </footer>
+
 
   </body>
-
 </html>
