--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <header>
-      <h1>David's Programming Cheat Sheet</h1>
-      <h2>(and stuff)</h2>
+      <h1 id="title">David's Programming Cheat Sheet</h1>
+      <h2 id="sub-title">(and stuff)</h2>
     </header>
 
     <div class="container">
