--- a/colors.html
+++ b/colors.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <header>
-      <h1>David's Programming Cheat Sheet</h1>
-      <h2>(and stuff)</h2>
+      <h1 id="title">David's Programming Cheat Sheet</h1>
+      <h2 id="sub-title">(and stuff)</h2>
     </header>
 
     <div class="container">
@@ -54,26 +54,26 @@
       </nav>
 
       <div class="content">
-        <h1 class="colors-bold"><span class="red">C</span><span class="orange">O</span><span class="yellow">L</span><span class="green">O</span><span class="blue">R</span><span class="purple">S</span></h1>
+        <h1><span class="red">C</span><span class="orange">O</span><span class="yellow">L</span><span class="green">O</span><span class="blue">R</span><span class="purple">S</span></h1>
 
         <p>You can use different colors in various ways to bring your webpage to life. However, whether you're setting the font color with "color:" or setting a background color with "background-color:" you still need to select a color. But how???</p>
 
         <h2 class="colors-bold">Three Common Approaches</h2>
         <ul>
-          <li><span class="colors-bold">Name</span>
+          <h3>Name</h3>
           <p>Many colors can be summoned just by their name. Many of these colors tend to be common (<span class="red">RED</span>, <span class="blue">BLUE</span>, <span class="green">GREEN</span>), but others are rather obscure. (<span class="light-steel-blue">LIGHTSTEELBLUE</span>, <span class="pale-goldenrod">PALEGOLDENROD</span>, <span class="plum">PLUM</span>).</p>
-          <p>For a full list of colors that can be called by name, visit <a href="https://www.w3schools.com/cssref/css_colors.asp" target="_blank">W3Schools'</a> page on colors.</p></li>
+          <p>For a full list of colors that can be called by name, visit <a href="https://www.w3schools.com/cssref/css_colors.asp" target="_blank">W3Schools'</a> page on colors.</p>
 
-          <li><span class="colors-bold">Hexadecimal Value</span>
+          <h3>Hexadecimal Value</h3>
           <p>Colors can also be summoned by using their corresponding hexadecimal numbers.</p>
           <p>For example, the hexadecimal for the color <span class="hex-red">red</span> is <span class="hex-red">#FF0000</span>.</p>
           <p>With hexadecimal notation, you can get colors that are more specific than if you just use a color's name. You can experiment with various shades.</p>
-          <p>If you use <span class="lighter-hex-red">#ff7777</span>, you get a lighter shade of <span class="hex-red">red</span>.</p></li>
+          <p>If you use <span class="lighter-hex-red">#ff7777</span>, you get a lighter shade of <span class="hex-red">red</span>.</p>
 
-          <li><span class="colors-bold">RGB Value</span>
+          <h3>RGB Value</h3>
           <p>Another way to classentify a color is with its RGB value (RGB stands for Red-Green-Blue).</p>
           <p>By combining varying intensities of <span class="red">red</span>, <span class="green">green</span>, and <span class="blue">blue</span>, new colors can be attained. The "intensity scale" ranges from 0 to 255.</p>
-          <p>The RGB value for (standard) <span class="blue">blue</span> is <span class="blue">rgb(0, 0, 255)</span>. The values for <span class="red">red</span> and <span class="green">green</span> are set to zero. But if you sprinkle some <span class="red">red</span> and <span class="green">green</span>, you get a new color (example: <span id="new-color">rgb(145, 54, 255)</span>).</li>
+          <p>The RGB value for (standard) <span class="blue">blue</span> is <span class="blue">rgb(0, 0, 255)</span>. The values for <span class="red">red</span> and <span class="green">green</span> are set to zero. But if you sprinkle some <span class="red">red</span> and <span class="green">green</span>, you get a new color (example: <span id="new-color">rgb(145, 54, 255)</span>).
         </ul>
       </div>
 
