--- a/opacity.html
+++ b/opacity.html
@@ -1,67 +1,80 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Programming Cheat Sheet</title>
-    <link href="style.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+    <meta charset="utf-8">
+    <title></title>
+    <link href="style.css" rel="stylesheet"/>
+    <link href="opaque-style.css" rel="stylesheet"/>
   </head>
-
   <body>
     <header>
-      <h1>David's Programming Cheat Sheet</h1>
-      <h2>(and stuff)</h2>
+      <h1 id="title">David's Programming Cheat Sheet</h1>
+      <h2 id="sub-title">(and stuff)</h2>
     </header>
 
-    <div class="left-panel">
-
-      <a class="nav-button" href="index.html">
-        <div class="buttons">
-          HOME
-        </div>
-      </a>
-
-      <a class="nav-button" href="colors.html">
-        <div class="buttons">
-          COLORS
-        </div>
-      </a>
-
-      <a class="nav-button" href="opacity.html">
-        <div class="buttons">
-          OPACITY
-        </div>
-      </a>
-
-      <a class="nav-button" href="line-height.html">
-        <div class="buttons">
-          LINE-HEIGHT
-        </div>
-      </a>
-
-      <a class="nav-button" href="border-radius.html">
-        <div class="buttons">
-          BORDER RADIUS
-        </div>
-      </a>
-
-    </div>
-
     <div class="container">
-      <h1>OPACITY</h1>
-      <p>Sometimes, we want a solid color. But sometimes, we want some transparency. So... we adjust the opacity!</p>
-      <p>Below is a black square that is fully opaque.</p>
-      <div id="fully-opaque"></div>
-      <p>And here is that same black square, but at only 75% opacity.</p>
-      <div id="seventy-five-opaque"></div>
-      <p>At 50% opacity.</p>
-      <div id="fifty-opaque"></div>
-      <p>At 25% opacity.</p>
-      <div id="twenty-five-opaque"></div>
-      <p>And at 10% opacity.</p>
-      <div id="ten-opaque"></div>
-      <p>The <strong>ONLY</strong> difference between these squares is the opacity. They are all black.</p>
+
+      <nav>
+        <a class="nav-button" href="index.html">
+            <div class="buttons">
+              HOME
+            </div>
+          </a>
+
+        <a class="nav-button" href="colors.html">
+          <div class="buttons">
+            COLORS
+          </div>
+        </a>
+
+        <a class="nav-button" href="opacity.html">
+          <div class="buttons">
+            OPACITY
+          </div>
+        </a>
+
+        <a class="nav-button" href="line-height.html">
+          <div class="buttons">
+            LINE-HEIGHT
+          </div>
+        </a>
+
+        <a class="nav-button" href="border-radius.html">
+          <div class="buttons">
+            BORDER RADIUS
+          </div>
+        </a>
+
+        <a class="nav-button" href="web-fonts.html">
+          <div class="buttons">
+            WEB FONTS
+          </div>
+        </a>
+
+      </nav>
+
+      <div class="content">
+        <h1>OPACITY</h1>
+        <p>Sometimes, we want a solid color. But sometimes, we want some transparency. So... we adjust the opacity!</p>
+        <p>Below is a black square that is fully opaque.</p>
+        <div id="fully-opaque"></div>
+        <p>And here is that same black square, but at only 75% opacity.</p>
+        <div id="seventy-five-opaque"></div>
+        <p>At 50% opacity.</p>
+        <div id="fifty-opaque"></div>
+        <p>At 25% opacity.</p>
+        <div id="twenty-five-opaque"></div>
+        <p>And at 10% opacity.</p>
+        <div id="ten-opaque"></div>
+        <p>The <strong>ONLY</strong> difference between these squares is the opacity. They are all black.</p>
+      </div>
+
     </div>
+
+    <footer>
+      <p>©20xx</p>
+    </footer>
+
 
   </body>
-
 </html>
