updated title in head for index, colors, and opacity

--- a/colors.html
+++ b/colors.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Colors</title>
     <link href="style.css" rel="stylesheet" />
     <link href="color-style.css" rel="stylesheet" />
   </head>
