--- a/opacity.html
+++ b/opacity.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Opacity</title>
     <link href="style.css" rel="stylesheet"/>
     <link href="opaque-style.css" rel="stylesheet"/>
   </head>
