linked line-height-style.css

--- a/line-height.html
+++ b/line-height.html
@@ -2,81 +2,91 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My Programming Cheat Sheet</title>
-    <link href="style.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+    <title>Home</title>
+    <link href="style.css" rel="stylesheet"/>
+    <link href="line-height-style.css" rel="stylesheet"/>
   </head>
   <body>
     <header>
-      <h1>David's Programming Cheat Sheet</h1>
-      <h2>(and stuff)</h2>
+      <h1 id="title">David's Programming Cheat Sheet</h1>
+      <h2 id="sub-title">(and stuff)</h2>
     </header>
 
-    <div class="left-panel">
-
-      <a class="nav-button" href="index.html">
-        <div class="buttons">
-          HOME
-        </div>
-      </a>
-
-      <a class="nav-button" href="colors.html">
-        <div class="buttons">
-          COLORS
-        </div>
-      </a>
-
-      <a class="nav-button" href="opacity.html">
-        <div class="buttons">
-          OPACITY
-        </div>
-      </a>
-
-      <a class="nav-button" href="line-height.html">
-        <div class="buttons">
-          LINE-HEIGHT
-        </div>
-      </a>
-
-      <a class="nav-button" href="border-radius.html">
-        <div class="buttons">
-          BORDER RADIUS
-        </div>
-      </a>
-
-    </div>
-
     <div class="container">
-      <h1>LINE HEIGHT</h1>
 
-      <p>The “line-height” property determines how much space is above and below inline elements. It takes a couple of different property values, including number, percentage, and length (px, pt, cm, etc).</p>
+      <nav>
+        <a class="nav-button" href="index.html">
+          <div class="buttons">
+            HOME
+          </div>
+        </a>
 
-      <p>So how does "line-height" actually look?</p>
+        <a class="nav-button" href="colors.html">
+          <div class="buttons">
+            COLORS
+          </div>
+        </a>
 
-      <p>Here we have default line-height:</p>
+        <a class="nav-button" href="opacity.html">
+          <div class="buttons">
+            OPACITY
+          </div>
+        </a>
 
-      <p id="lh-1">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        <a class="nav-button" href="line-height.html">
+          <div class="buttons">
+            LINE-HEIGHT
+          </div>
+        </a>
 
-      <p>And here we have line-height set to "1.5" (150% of the default):</p>
+        <a class="nav-button" href="border-radius.html">
+          <div class="buttons">
+            BORDER RADIUS
+          </div>
+        </a>
 
-      <p id="lh-1point5">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        <a class="nav-button" href="web-fonts.html">
+          <div class="buttons">
+            WEB FONTS
+          </div>
+        </a>
 
-      <p>And here we have line-height set to "2" (200% of the default):</p>
+      </nav>
 
-      <p id="lh-2">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+      <div class="content">
+        <h1>LINE HEIGHT</h1>
 
-      <p>And here we have line-height set to "5" (500% of the default):</p>
+        <p>The “line-height” property determines how much space is above and below inline elements. It takes a couple of different property values, including number, percentage, and length (px, pt, cm, etc).</p>
 
-      <p id="lh-5">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        <p>So how does "line-height" actually look?</p>
 
-      <p>References:</p>
-      <p><a href="https://www.w3schools.com/cssref/pr_dim_line-height.asp">W3School</a></p>
-      <p><a href="https://css-tricks.com/almanac/properties/l/line-height/">CSS Tricks</a></p>
+        <p>Here we have default line-height:</p>
 
+        <p id="lh-1">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
 
+        <p>And here we have line-height set to "1.5" (150% of the default):</p>
 
+        <p id="lh-1point5">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+
+        <p>And here we have line-height set to "2" (200% of the default):</p>
+
+        <p id="lh-2">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+
+        <p>And here we have line-height set to "5" (500% of the default):</p>
+
+        <p id="lh-5">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+
+        <p>References:</p>
+        <p><a href="https://www.w3schools.com/cssref/pr_dim_line-height.asp">W3School</a></p>
+        <p><a href="https://css-tricks.com/almanac/properties/l/line-height/">CSS Tricks</a></p>
+      </div>
 
     </div>
+
+    <footer>
+      <p>©20xx</p>
+    </footer>
+
 
   </body>
 </html>
