--- a/border-radius.html
+++ b/border-radius.html
@@ -2,91 +2,103 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My Programming Cheat Sheet</title>
-    <link href="style.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+    <title>Home</title>
+    <link href="style.css" rel="stylesheet"/>
   </head>
   <body>
     <header>
-      <h1>David's Programming Cheat Sheet</h1>
-      <h2>(and stuff)</h2>
+      <h1 id="title">David's Programming Cheat Sheet</h1>
+      <h2 id="sub-title">(and stuff)</h2>
     </header>
 
-    <div class="left-panel">
-
-      <a class="nav-button" href="index.html">
-        <div class="buttons">
-          HOME
-        </div>
-      </a>
-
-      <a class="nav-button" href="colors.html">
-        <div class="buttons">
-          COLORS
-        </div>
-      </a>
-
-      <a class="nav-button" href="opacity.html">
-        <div class="buttons">
-          OPACITY
-        </div>
-      </a>
-
-      <a class="nav-button" href="line-height.html">
-        <div class="buttons">
-          LINE-HEIGHT
-        </div>
-      </a>
-
-      <a class="nav-button" href="border-radius.html">
-        <div class="buttons">
-          BORDER RADIUS
-        </div>
-      </a>
-
-    </div>
-
     <div class="container">
-      <h1>BORDER RADIUS</h1>
 
-      <p>With the use of the border-radius property, you can give elements rounded edges.</p>
+      <nav>
+        <a class="nav-button" href="index.html">
+          <div class="buttons">
+            HOME
+          </div>
+        </a>
 
-      <p>There are four property values that can be used in order to set the border-radius.</p>
-      <ul>
-        <li>length: set a pixel amount (default is zero)</li>
-        <li>percent: percentage between 0 and 100</li>
-        <li>initial: set to default value</li>
-        <li>inherit: inherit from parent element</li>
-      </ul>
+        <a class="nav-button" href="colors.html">
+          <div class="buttons">
+            COLORS
+          </div>
+        </a>
 
-      <p>By default, border-radius will give all four corners the same curvature, but you can specify corners as necessary.</p>
+        <a class="nav-button" href="opacity.html">
+          <div class="buttons">
+            OPACITY
+          </div>
+        </a>
 
-      <ol>
-        <li>One Value
-          <p>border-radius: 10px</p>
-          <div class="one-value"></div>
-        </li>
+        <a class="nav-button" href="line-height.html">
+          <div class="buttons">
+            LINE-HEIGHT
+          </div>
+        </a>
 
-        <li>Two Values
-          <p>border-radius: 10px 20px</p>
-          <div class="two-values"></div>
-        </li>
+        <a class="nav-button" href="border-radius.html">
+          <div class="buttons">
+            BORDER RADIUS
+          </div>
+        </a>
 
-        <li>Three Values
-          <p>border-radius: 10px 20px 30px</p>
-          <div class="three-values"></div>
-        </li>
+        <a class="nav-button" href="web-fonts.html">
+          <div class="buttons">
+            WEB FONTS
+          </div>
+        </a>
 
-        <li>Four Values
-          <p>border-radius: 10px 20px 30px 40px</p>
-          <div class="four-values"></div>
-        </li>
-      </ol>
+      </nav>
 
-      <p>References:</p>
-      <p><a href="https://www.w3schools.com/cssref/css3_pr_border-radius.asp">W3School</a></p>
+      <div class="content">
+        <h1>BORDER RADIUS</h1>
+
+        <p>With the use of the border-radius property, you can give elements rounded edges.</p>
+
+        <p>There are four property values that can be used in order to set the border-radius.</p>
+        <ul>
+          <li>length: set a pixel amount (default is zero)</li>
+          <li>percent: percentage between 0 and 100</li>
+          <li>initial: set to default value</li>
+          <li>inherit: inherit from parent element</li>
+        </ul>
+
+        <p>By default, border-radius will give all four corners the same curvature, but you can specify corners as necessary.</p>
+
+        <ol>
+          <li>One Value
+            <p>border-radius: 10px</p>
+            <div class="one-value"></div>
+          </li>
+
+          <li>Two Values
+            <p>border-radius: 10px 20px</p>
+            <div class="two-values"></div>
+          </li>
+
+          <li>Three Values
+            <p>border-radius: 10px 20px 30px</p>
+            <div class="three-values"></div>
+          </li>
+
+          <li>Four Values
+            <p>border-radius: 10px 20px 30px 40px</p>
+            <div class="four-values"></div>
+          </li>
+        </ol>
+
+        <p>References:</p>
+        <p><a href="https://www.w3schools.com/cssref/css3_pr_border-radius.asp">W3School</a></p>
+      </div>
 
     </div>
+
+    <footer>
+      <p>©20xx</p>
+    </footer>
+
 
   </body>
 </html>
