--- a/line-height.html
+++ b/line-height.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Home</title>
+    <title>Line Height</title>
     <link href="style.css" rel="stylesheet"/>
     <link href="line-height-style.css" rel="stylesheet"/>
   </head>
