updated title in head

--- a/border-radius.html
+++ b/border-radius.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Home</title>
+    <title>Border Radius</title>
     <link href="style.css" rel="stylesheet"/>
+    <link href="border-radius-style.css" rel="stylesheet"/>
   </head>
   <body>
     <header>
