updated resource note at bottom

--- a/border-radius.html
+++ b/border-radius.html
@@ -90,7 +90,7 @@
           </li>
         </ol>
 
-        <p>References:</p>
+        <p class="add-res">Additional Resources:</p>
         <p><a href="https://www.w3schools.com/cssref/css3_pr_border-radius.asp">W3School</a></p>
       </div>
 
