created javascript-variables.html. transferred css files into style folder. fixed internal links in all html files. moved images to image folder

--- a/border-radius.html
+++ b/border-radius.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Border Radius</title>
-    <link href="style.css" rel="stylesheet"/>
-    <link href="border-radius-style.css" rel="stylesheet"/>
+    <link href="style/style.css" rel="stylesheet"/>
+    <link href="style/border-radius-style.css" rel="stylesheet"/>
   </head>
   <body>
     <header>
@@ -48,6 +48,12 @@
         <a class="nav-button" href="web-fonts.html">
           <div class="buttons">
             WEB FONTS
+          </div>
+        </a>
+
+        <a class="nav-button" href="javascript-variables.html">
+          <div class="buttons">
+            JAVASCRIPT: VARIABLES
           </div>
         </a>
 
