--- a/javascript-variables.html
+++ b/javascript-variables.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Home</title>
+    <title>JavaScript: Variables</title>
     <link href="style/style.css" rel="stylesheet"/>
   </head>
   <body>
