added additional resources

--- a/javascript-variables.html
+++ b/javascript-variables.html
@@ -59,11 +59,11 @@
       </nav>
 
       <div class="content">
-        <h1>HOME</h1>
-        <p>Over the course of the next couple of weeks, I will be adding explanations and mini-guides to this webpage.</p>
-        <p>Use the navigation bar on the left to select a topic.</p>
-        <p>Also, here's a picture of my cats, Henry (left) and Rocky (right).
-        <img src="images/my-kitties.jpg" alt="rocky and henry" />
+        <h1>JavaScript: Variables</h1>
+
+        <p class="add-res">Additional Resources:</p>
+        <p><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/var">Mozilla Developer's Network</a></p>
+        <p><a href="https://www.w3schools.com/js/js_variables.asp">W3Schools</a></p>
       </div>
 
     </div>
