--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <p>Over the course of the next couple of weeks, I will be adding explanations and mini-guides to this webpage.</p>
         <p>Use the navigation bar on the left to select a topic.</p>
         <p>Also, here's a picture of my cats, Henry (left) and Rocky (right).
-        <img src="images/my-kitties.jpg" alt="rocky and henry" />
+        <img src="images/my-kitties.jpg" alt="rocky and henry" class="kitties"/>
       </div>
 
     </div>
