--- a/web-fonts.html
+++ b/web-fonts.html
@@ -62,7 +62,8 @@
       <div class="content">
         <h1>WEB FONTS</h1>
         <p>There are several "Web Safe" fonts that most browsers can read (for a list of these fonts, click <a href="https://www.w3schools.com/cssref/css_websafe_fonts.asp">here</a>).</p>
-        <p>But what if was want to use a different font? Maybe we want a font more elegant than "cursive," or maybe a font reminiscent of video games from the 80s. Other sites have been able to use far more varied fonts.</p>
+        <p>But what if you want to use a different font? Maybe you want a font more elegant than "cursive," or maybe a font reminiscent of video games from the 80s.</p>
+        <p>There are limitless options available, and more being created everyday.</p>
         <p>Some of my favorites include:</p>
 
         <div class="sample-text">
