updated javascript-variables.html to fix variable redefining

--- a/javascript-variables.html
+++ b/javascript-variables.html
@@ -85,7 +85,7 @@
           <p><span style="font-weight:bold">var</span> superAwesomeVariable = 'My variable contains a string';</p>
         </div>
 
-        <p>If you need to change your variable value, all you need to do is replace its value with a new value.</p>
+        <p>If you need to change your variable value, all you need to do is replace its value with a new value. You can also restate the variable, without "var" and with the new value.</p>
 
         <p>You can combine variables inside of variables.</p>
 
