corrected variable naming info

--- a/javascript-variables.html
+++ b/javascript-variables.html
@@ -77,7 +77,7 @@
         </div>
 
         <p>To set up a variable in JavaScript, all you need to do is type "var" + the variable's name + "=" + the value being inputted + ";"</p>
-        <p><span style="font-weight:bold">NOTE:</span> When naming your variable, never start with a capitalized letter. Always start lower case. Additionally, a variable's name must NOT include any spaces. Either use camel case (ex: camelCase), kebab case (ex: kebab-case), snake case (ex: snake_case), or some similar variation.</p>
+        <p><span style="font-weight:bold">NOTE:</span> When naming your variable, never start with a capitalized letter. Always start lower case. Additionally, a variable's name must NOT include any spaces or hyphens. Either use single-word variable names or camel case (ex: camelCase).</p>
 
         <p>Example:</p>
 
