add css transition and css animations buttons to every page

--- a/index.html
+++ b/index.html
@@ -50,6 +50,18 @@
           </div>
         </a>
 
+        <a class="nav-button" href="css-transition.html">
+          <div class="buttons">
+            CSS TRANSITION
+          </div>
+        </a>
+
+        <a class="nav-button" href="css-animations.html">
+          <div class="buttons">
+            CSS ANIMATIONS
+          </div>
+        </a>
+
         <a class="nav-button" href="javascript-variables.html">
           <div class="buttons">
             JAVASCRIPT: VARIABLES
