--- a/javascript-variables.html
+++ b/javascript-variables.html
@@ -51,12 +51,23 @@
           </div>
         </a>
 
+        <a class="nav-button" href="css-transition.html">
+          <div class="buttons">
+            CSS TRANSITION
+          </div>
+        </a>
+
+        <a class="nav-button" href="css-animations.html">
+          <div class="buttons">
+            CSS ANIMATIONS
+          </div>
+        </a>
+
         <a class="nav-button" href="javascript-variables.html">
           <div class="buttons">
             JAVASCRIPT: VARIABLES
           </div>
         </a>
-
       </nav>
 
       <div class="content">
