updated bulletpoints and renamed some files

--- a/border-radius.html
+++ b/border-radius.html
@@ -76,7 +76,7 @@
         <p>With the use of the border-radius property, you can give elements rounded edges.</p>
 
         <p>There are four property values that can be used in order to set the border-radius.</p>
-        <ul>
+        <ul class="border-list">
           <li>length: set a pixel amount (default is zero)</li>
           <li>percent: percentage between 0 and 100</li>
           <li>initial: set to default value</li>
