--- a/css-animations.html
+++ b/css-animations.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Border Radius</title>
+    <title>CSS Animations</title>
     <link href="style/style.css" rel="stylesheet"/>
     <link href="style/border-radius-style.css" rel="stylesheet"/>
   </head>
